--- a/neural_networks_project.ipynb
+++ b/neural_networks_project.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a group project with team members J. Chen, F. Mota, and T. Phu. In this notebook we use TensorFlow to compare the performance of varying neural network typologies and hyperparameter settings in image recognition using the MNIST data set. using Aurélien Géron's chapter 11 notebook for guidance--https://github.com/ageron/handson-ml/blob/master/11_deep_learning.ipynb."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
